2008-06-06  Matthew Barnes  <mbarnes@redhat.com>

	** Allow evolution-exchange to build with G_DISABLE_SINGLE_INCLUDES
	   and GTK_DISABLE_SINGLE_INCLUDES defined.  (#536638)

2008-06-04  Wang Xin  <jedy.wang@sun.com>

	Fixes #536376

	* configure.in: Check libebackend.

2008-06-02  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.3 release and version bump.

2008-06-02  Tor Lillqvist  <tml@novell.com>

	* addressbook/Makefile.am (install-data-local): Work around
	annoying MSYS feature on Win32 when installing the schema: Echo
	the command to a temporary .bat file and run it with cmd.exe...

2008-05-26  Johnny Jacob  <jjohnny@novell.com>

	** Fix for Bug #533422
	
	* storage/Makefile.am (EXTRA_DIST): server_DATA should not
	be packed in dist tarballs.

2008-05-23  Øystein Gisnås  <oystein@gisnas.net>

	** Fix for bug #366250

	* configure.in: Don't compile/package semi-free RFCs and other IETF 
	documents that are easily accessible on the web. 

2008-05-14  Matthew Barnes  <mbarnes@redhat.com>

	** Fix for bug #523023

	* storage/exchange-storage.c: (account_new_folder): Another leak fix.

2008-05-13  Tor Lillqvist  <tml@novell.com>

	Final outstanding Win32 portability changes.

	* storage/Makefile.am: Link with SOCKET_LIBS, too. On Windows, use
	a relative path for CONNECTOR_PATH in the server file instead of
	the absolute compile-time EVOLUTION_privlibexecdir. Replace also
	EXEEXT in the server file.

	* storage/exchage-storage.h: On Windows, declare three char*
	variables that will hold the datadir, gladedir and imagesdir
	constructed at run-time.

	* storage/main.c: Define and initialise the three char* variables
	mentioned above. Assume that evolution-exchange is installed in
	the same run-time prefix as evolution-data-server. Use
	g_get_tmp_dir() instead of hardcoding /tmp. Use gstdio wrappers to
	cope with arbitrary Unicode pathnames on Windows. Don't bother
	with the folder mode checks on Windows, as the stat::st_mode field